[gd_scene load_steps=3 format=3 uid="uid://04h8jgnlsom1"]

[ext_resource type="Script" path="res://Start Scene.gd" id="1_kl4b5"]
[ext_resource type="Theme" path="res://main_theme.tres" id="2_x5dc5"]

[node name="Start Scene" type="Node2D"]
script = ExtResource("1_kl4b5")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_x5dc5")
text = "CONNECTING TO SERVER..."
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_x5dc5")
text = "    RETRY    "

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
